Null dereference loading Blink layout test editing/execCommand/crash-replacing-list-by-list.html https://bugs.webkit.org/show_bug.cgi?id=149288 <rdar://problem/22746310>

Patch by Jiewen Tan <jiewen_tan@apple.com> on 2015-10-26
Reviewed by Chris Dumez.

Source/WebCore:

This is a merge of Blink r170821:
https://codereview.chromium.org/220233013

Test: editing/execCommand/crash-replacing-list-by-list.html

* editing/ReplaceSelectionCommand.cpp:
(WebCore::ReplaceSelectionCommand::insertAsListItems):

LayoutTests:

* editing/execCommand/crash-replacing-list-by-list-expected.txt: Added.
* editing/execCommand/crash-replacing-list-by-list.html: Added.

Canonical link: https://commits.webkit.org/168728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191609 268f45cc-cd09-0410-ab3c-d52691b4dbfc